# MyPiccolo

./: CMakeLists.txt  README.md  build_windows.bat
blog/: 001-Framework.md  102-RHI_init.md  103-setupPipeline.md  104-finishPipeline.md  105-helloTriangle.md  context.md
blog/chapter1/: 101-Framework.md  103-setupPipeline.md  106-summary.md
blog/chapter2/: 201.md  202.md  203.md  204.md  205-1.md  205-2.md  205-3.md  206.md  207.md
blog/mindmap/: 106.km  reflection.drawio  render.km
cmake/: GenerateShaderCPPFile.cmake  ShaderCompile.cmake
engine/: CMakeLists.txt
engine/shader/: CMakeLists.txt
engine/shader/glsl/: debugdraw.frag  debugdraw.vert
engine/shader/include/: constants.h
engine/source/: .gitignore
engine/source/editor/: CMakeLists.txt
engine/source/editor/include/: editor.h  editor_ui.h
engine/source/editor/source/: editor.cpp  editor_ui.cpp  main.cpp
engine/source/precompile/: precompile.cmake  precompile.json.in
engine/source/runtime/: CMakeLists.txt  engine.cpp  engine.h
engine/source/runtime/core/base/: hash.h  macro.h
engine/source/runtime/core/log/: log_system.cpp  log_system.h
engine/source/runtime/core/math/: vector2.h  vector3.h
engine/source/runtime/core/meta/: json.h  meta_example.cpp  meta_example.h
engine/source/runtime/core/meta/reflection/: reflection.cpp  reflection.h  reflection_register.cpp  reflection_register.h
engine/source/runtime/core/meta/serializer/: serializer.cpp  serializer.h
engine/source/runtime/function/global/: global_context.cpp  global_context.h
engine/source/runtime/function/render/: render_pipeline.cpp  render_pipeline.h  render_pipeline_base.cpp  render_resouce_base.h  render_system.cpp  render_system.h  render_type.h  window_system.cpp  window_system.h
engine/source/runtime/function/render/debugdraw/: debug_draw_buffer.cpp  debug_draw_buffer.h  debug_draw_group.cpp  debug_draw_group.h  debug_draw_manager.cpp  debug_draw_manager.h  debug_draw_pipeline.cpp  debug_draw_pipeline.h  debug_draw_primitive.cpp  debug_draw_primitive.h
engine/source/runtime/function/render/interface/: render_pipeline_base.h  rhi.h  rhi_struct.h
engine/source/runtime/function/render/interface/vulkan/: vulkan_rhi.cpp  vulkan_rhi.h  vulkan_rhi_resource.h  vulkan_util.cpp  vulkan_util.h
engine/source/runtime/function/ui/: window_ui.cpp  window_ui.h
engine/source/runtime/resource/asset_manager/: asset_manager.h
engine/source/runtime/resource/config_manager/: config_manager.cpp  config_manager.h
